--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@stripe/stripe-js": "^4.5.0",
+    "axios": "^1.7.7",
     "google-spreadsheet": "^4.1.4",
     "ical.js": "^2.0.1",
     "next": "14.2.5",
+    "raw-body": "^3.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
