--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.9.0",
     "google-spreadsheet": "^4.1.4",
     "ical.js": "^2.0.1",
     "next": "14.2.5",
