--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "google-spreadsheet": "^4.1.4",
     "ical.js": "^2.0.1",
+    "lucide-react": "^0.451.0",
     "next": "14.2.5",
     "raw-body": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "stripe": "^16.12.0"
+    "stripe": "^16.12.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
